--- a/kolofortuny/style.css
+++ b/kolofortuny/style.css
@@ -1,15 +1,20 @@
 body {
     background-image: url(background.jpg);
     color: white;
+    font-size: larger;
+}
+
+table {
+    table-layout: fixed;
+    width: 100px;
 }
 
 #wrap {
     position: relative;
-    float: left;
-    width: 100%;
+    float: none;
     margin: 0 auto;
-    border: 1px solid red;
     visibility: hidden;
+    text-align: center;
 }
 
 #menu{
@@ -18,5 +23,53 @@ body {
     text-align: center;
 }
 
-.button{
+#about{
+    position:fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+    height: 60%;
+    margin: 0 auto;
+    background-color: dimgray;
+    visibility: hidden;
+    color: black;
+    z-index: 99;
+}
+
+#closeAbout{
+    position: relative;
+    float: right;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: large;
+}
+
+#board {
+    position: relative;
+    margin-left: 85%;
+}
+
+.invLetters{
+    color: white;
+    box-shadow: inset 1em 1em white;
+    margin: 3px;
+    font-family: monospace;
+    font-size: xx-large;
+    text-transform: uppercase;
+}
+
+.letters{
+    color: white;
+    margin: 3px;
+    font-family: monospace;
+    font-size: xx-large;
+    text-transform: uppercase;
+}
+
+.spaces {
+    color: white;
+    margin: 2px;
+    font-family: monospace;
+    visibility: hidden;
 }
